WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196125
[Web Animations] com.apple.WebKit.WebContent.Development at com.apple.WebCore: WebCore::WebAnimation::timeToNextTick const + 757
https://bugs.webkit.org/show_bug.cgi?id=196125
Summary
[Web Animations] com.apple.WebKit.WebContent.Development at com.apple.WebCore...
Antoine Quint
Reported
2019-03-21 18:58:50 PDT
We eventually hit the ASSERT_NOT_REACHED in WebAnimation::timeToNextTick with the following command: run-webkit-tests --debug animations/stacking-context-not-fill-forwards.html --iterations=1000 --exit-after-n-failures=1
Attachments
Patch
(2.51 KB, patch)
2019-03-21 19:03 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-03-21 18:59:05 PDT
<
rdar://problem/46520059
>
Antoine Quint
Comment 2
2019-03-21 19:03:20 PDT
Created
attachment 365664
[details]
Patch
Dean Jackson
Comment 3
2019-03-21 19:04:09 PDT
Comment on
attachment 365664
[details]
Patch Where is the test?
Antoine Quint
Comment 4
2019-03-21 19:08:17 PDT
(In reply to Dean Jackson from
comment #3
)
> Comment on
attachment 365664
[details]
> Patch > > Where is the test?
The API itself wouldn’t let you input a value close enough to the boundary to be within the epsilon because they get rounded to the nearest millisecond. We'll know this issue is fixed as this caused crashes in Debug builds for a number of tests, this should now go down to 0.
WebKit Commit Bot
Comment 5
2019-03-22 06:47:01 PDT
Comment on
attachment 365664
[details]
Patch Clearing flags on attachment: 365664 Committed
r243374
: <
https://trac.webkit.org/changeset/243374
>
WebKit Commit Bot
Comment 6
2019-03-22 06:47:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug