[Web Animations] com.apple.WebKit.WebContent.Development at com.apple.WebCore: WebCore::WebAnimation::timeToNextTick const + 757 https://bugs.webkit.org/show_bug.cgi?id=196125 <rdar://problem/46520059>

Patch by Antoine Quint <graouts@apple.com> on 2019-03-22
Reviewed by Dean Jackson.

Because of floating point math in playState() that wouldn't account for timeEpsilon, we would get into a state where the animation phase
was "after" but the play state was "running" when the current time was about a microsecond away from the active time boundary. This meant
that the early return statement in WebAnimation::timeToNextTick() would not be hit while we would not handle the possibility of being in
the "after" phase in the rest of the function, therefore eventually hitting the ASSERT_NOT_REACHED() at the end of the function.

We now account for timeEpsilon in playState() and correctly report we're in the "finished" play state when in the "after" phase also.

* animation/WebAnimation.cpp:
(WebCore::WebAnimation::playState const):

Canonical link: https://commits.webkit.org/210436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243374 268f45cc-cd09-0410-ab3c-d52691b4dbfc